[project]
name = "processgraph"
version = "0.1.0"
description = "A graph-based framework for modeling industrial process systems"
readme = "README.md"
authors = [
    { name = "Gregor Tondl", email = "gregor.tondl@boku.ac.at" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"
